--- a/css/global.css
+++ b/css/global.css
@@ -74,3 +74,31 @@ td.is-gap > * {
   width: 3em;
   text-align: center;
 }
+
+.grid {
+  position: relative;
+}
+.grid-row {
+  white-space: nowrap;
+}
+.grid-cell {
+  vertical-align: top;
+  display: inline-block;
+  width: 250px;
+  height: 128px;
+  text-align: center;
+  white-space: normal;
+  padding-right: 40px;
+  padding-bottom: 40px;
+}
+.grid-cell .box {
+  height: 88px;
+}
+.grid-bg {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
