Add horisontal scrolling to diagrams. Handle values with multiple agents and options.

--- a/css/diagram.css
+++ b/css/diagram.css
@@ -1,3 +1,9 @@
+/* TODO: Use CSS Grid to fix missing arrows caused by overflow-x. */
+.diagram-cont {
+  overflow-x: auto;
+  padding-top: 20px;
+  margin-bottom: 30px;
+}
 .diagram {
   position: relative;
 }
