Calculate final decision values for individual value nodes. Fix bugs in decision subformulas.

--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,10 @@ nav.navbar.has-shadow {
   box-shadow: 0px 0px 4px grey;
 }
 
+.slider {
+  max-width: 640px;
+}
+
 input[type="range"].is-fullwidth {
   width: 100%;
 }
