--- a/client/css/diagram.css
+++ b/client/css/diagram.css
@@ -34,6 +34,12 @@
   right: 5px;
   background: inherit;
 }
+.diagram-cell .button .badge2 {
+  right: 27px;
+}
+.diagram-cell .button .badge3 {
+  right: 33px;
+}
 .diagram-cell .button .badge.fa-sliders-h {
   padding: 0 1px;
 }
