Improve arguments functionality and overall UI design.

--- a/client/css/diagram.css
+++ b/client/css/diagram.css
@@ -3,12 +3,16 @@
   overflow-x: auto;
   padding-top: 20px;
   margin-bottom: 30px;
+  text-align: center;
 }
 .diagram {
   position: relative;
+  display: inline-block;
+  text-align: left;
 }
 .diagram-row {
   white-space: nowrap;
+  display: inline-block;
 }
 .diagram-cell {
   vertical-align: top;
@@ -20,9 +24,13 @@
   padding-right: 40px;
   padding-bottom: 30px;
 }
-.diagram-cell.value-cell {
+.diagram-cell.value-cell:last-child {
   width: 62px;
   padding: 0px;
+  margin-left: -12px;
+}
+.diagram-cell.value-cell:not(:last-child) .button {
+  width: 62px;
   margin-left: -12px;
 }
 .diagram-cell.value-cell.shift-back {
@@ -35,6 +43,7 @@
   border-width: 2px;
   border-color: black;
   position: relative;
+  box-shadow: 0px 4px 9px -4px grey;
 }
 .diagram-cell.value-cell .button {
   border-radius: 62px;
@@ -61,7 +70,7 @@
   right: -9px;
 }
 .diagram-cell .button:hover {
-  border-color: gray;
+  background-color: whitesmoke;
 }
 .diagram-bg {
   position: absolute;
