--- a/client/css/global.css
+++ b/client/css/global.css
@@ -1,6 +1,7 @@
 .section {
   max-width: 1200px;
   margin: 0 auto;
+  padding-top: 1.5rem;
 }
 #disqus_thread.section {
   margin-top: -35px;
@@ -12,14 +13,26 @@ nav.navbar.has-shadow {
   box-shadow: 0px 0px 4px grey;
 }
 
+.tooltip.is-tooltip-active::before,
+.tooltip:hover::before {
+  font-size: 1rem;
+}
+
+.expand {
+  flex-grow: 1;
+}
+
 .tabs ul {
 	flex-shrink: 1;
 	flex-wrap: wrap;
-	border-bottom-color: transparent;
+	/* border-bottom-color: transparent; */
   justify-content: center;
 }
 .tabs.is-boxed a {
   border-bottom-color: #dbdbdb;
+}
+.tabs.is-boxed li {
+  margin-top: 5px;
 }
 
 input[type="range"].is-fullwidth {
