--- a/client/css/diagram.css
+++ b/client/css/diagram.css
@@ -16,7 +16,7 @@
 .diagram-cell {
   vertical-align: top;
   display: inline-block;
-  width: 250px;
+  width: 210px;
   height: 92px;
   text-align: center;
   white-space: normal;
@@ -43,6 +43,8 @@
   border-color: black;
   position: relative;
   box-shadow: 0px 4px 9px -4px grey;
+  padding-left: 0.25em;
+  padding-right: 0.25em;
 }
 .diagram-cell.value-cell .button {
   border-radius: 62px;
