--- a/client/css/diagram.css
+++ b/client/css/diagram.css
@@ -2,7 +2,10 @@
 .diagram-cont {
   overflow-x: auto;
   padding-top: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
   text-align: center;
+  margin: 0 -1.5rem;
 }
 .diagram {
   position: relative;
