Improve navigation between values and factors.

--- a/client/css/global.css
+++ b/client/css/global.css
@@ -108,3 +108,8 @@ td.is-gap > * {
 .is-flex {
   display: flex !important;
 }
+
+.button-section {
+  margin-top: -15px;
+  margin-bottom: 15px;
+}
