--- a/client/css/global.css
+++ b/client/css/global.css
@@ -3,10 +3,6 @@
   margin: 0 auto;
   padding-top: 1.5rem;
 }
-#disqus_thread.section {
-  padding-bottom: 0;
-  padding-top: 0;
-}
 
 nav.navbar.has-shadow {
   box-shadow: 0px 0px 4px grey;
@@ -26,6 +22,17 @@ nav.navbar.has-shadow {
 .navbar .logo i {
   margin-left: 3px;
   font-size: 15px;
+}
+.navbar .surveyIcon {
+  animation-delay: 4s;
+  animation-duration: 0.3s;
+  animation-name: blink;
+  animation-iteration-count: 15;
+  animation-direction: alternate;
+}
+@keyframes blink {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 @media screen and ( max-height: 499px ) {
@@ -50,6 +57,10 @@ nav.navbar.has-shadow {
 }
 .tooltip.is-tooltip-multiline::before {
   min-width: 17rem;
+}
+
+.ruler {
+  margin: 0 5px;
 }
 
 .expand {
@@ -112,4 +123,8 @@ td.is-gap > * {
 .button-section {
   margin-top: -15px;
   margin-bottom: 15px;
+}
+
+.margin-top-lg {
+  margin-top: 40px;
 }
